update hf models and sources for private/gated models
